# mcp-server-spreadsheet

./: .gitignore  CAPABILITIES.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  server.json
backends/: __init__.py  csv.py
examples/: example-free-form.csv  example-table.csv  example.ods  example.xlsx  tools.ods  tools.xlsx
src/mcp_server_spreadsheet/: __init__.py  server.py
src/mcp_server_spreadsheet/backends/: base.py  ods.py  xlsx.py
tests/: conftest.py  test_tools.py
