[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-spreadsheet"
version = "0.3.0"
description = "MCP server for reading and writing spreadsheet files (.xlsx, .csv, .ods)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Marek Rost" }]
keywords = ["mcp", "spreadsheet", "xlsx", "csv", "ods", "duckdb", "sql"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0",
    "duckdb>=0.10.0",
    "odfpy>=1.4.0",
]

[project.scripts]
mcp-server-spreadsheet = "mcp_server_spreadsheet.server:main"

[project.urls]
Repository = "https://github.com/marekrost/mcp-server-spreadsheet"

[dependency-groups]
dev = ["hatchling", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
